--- a/booking/templates/profilepatient.html
+++ b/booking/templates/profilepatient.html
@@ -66,7 +66,7 @@
     {% for appoint in appointment %}
     {% if appoint.approved and not appoint.canceled %}
     <div class="d-flex flex-wrap" style="align-items: center;padding: 25px; text-align: center;">
-        <div>
+        <div style="background-color: rgb(240, 201, 96)">
 
 
             <div class=" card" style="width: 18rem;margin: 8px;">
