--- a/booking/templates/profilepatient.html
+++ b/booking/templates/profilepatient.html
@@ -62,10 +62,12 @@
     <div style="padding: 35px 0 35px 35px">
         <h5>Nexts Appointments</h5>
     </div>
-    {% if appointment.length != 0 %}
-    {% for appoint in appointment %}
-    {% if appoint.approved and not appoint.canceled %}
-    <div class="d-flex flex-wrap" style="align-items: center;padding: 25px; text-align: center;">
+    <div class="d-flex flex-wrap"
+        style="align-items: center;padding: 25px; text-align: center;background-color: beige;">
+        {% if appointment.length != 0 %}
+        {% for appoint in appointment %}
+        {% if appoint.approved and not appoint.canceled %}
+
         <div style="background-color: rgb(240, 201, 96)">
 
 
@@ -108,16 +110,19 @@
             </div>
 
         </div>
+        {% endif %}
+        {%endfor%}
     </div>
-    {% endif %}
-    {%endfor%}
+
 
     <div style="padding: 35px 0 35px 35px">
         <h5>Appointments for approve</h5>
     </div>
-    {% for appoint in appointment %}
-    {% if not appoint.approved and not appoint.canceled%}
-    <div class="d-flex flex-wrap" style="align-items: center;padding: 0 25px 0 25px; text-align: center; ">
+    <div class="d-flex flex-wrap"
+        style="align-items: center;padding: 25px; text-align: center; background-color: bisque; ">
+
+        {% for appoint in appointment %}
+        {% if not appoint.approved and not appoint.canceled%}
 
         <div style="background-color: rgb(240, 201, 96);">
 
@@ -163,56 +168,47 @@
 
         {% endif %}
         {%endfor%}
+
+        {%else%}
+
+
+
+        <div> No Appoinment Found </div>
+
+        {%endif%}
     </div>
-    {%else%}
-
-
-
-    <div> No Appoinment Found </div>
-
-    {%endif%}
     <div style="padding: 35px 0 35px 35px">
         <h5>Canceled Appointments</h5>
     </div>
-    {% for appoint in appointment %}
-    {% if appoint.canceled %}
-    <div>
-        <div class="d-flex flex-wrap" style="align-items: center;padding: 0 0 25px 25px; text-align: center;">
-            <div style="background-color: brown">
-
-
-                <div class=" card" style="width: 18rem;margin: 8px;">
-
-
-                    <div class="card-body">
-                        <h5 class="card-title">Reserva con {{appoint.doctor}}</h5>
-                        <p class="card-text">Comments : {{appoint.comment}}</p>
-                        <p>{{appoint.datetime}}</p>
+    <div class="d-flex flex-wrap" style="align-items: center;padding: 25px; text-align: center;">
+        {% for appoint in appointment %}
+        {% if appoint.canceled %}
+        <div style="background-color: brown">
 
 
 
-                    </div>
+
+            <div class=" card" style="width: 18rem;margin: 8px;">
+
+
+                <div class="card-body">
+                    <h5 class="card-title">Reserva con {{appoint.doctor}}</h5>
+                    <p class="card-text">Comments : {{appoint.comment}}</p>
+                    <p>{{appoint.datetime}}</p>
+
+
+
                 </div>
-
             </div>
+
+
         </div>
+        {% endif %}
+        {%endfor%}
     </div>
 </div>
-{% endif %}
-{%endfor%}
+
 </div>
-<!-- <span class="input-group-text">Gender</span>
-    {% if patient.gender %}
-    <h6> {{patient.gender}} </h6>
-    {% else %}
-    <p> Insert gender</p>
-    {% endif %}
-    <button> Edit</button>
-</div>
-<div class="input-group">
-    <span class="input-group-text">Phone</span>
-    <p> {{patient.phone}} </p>
-    <button> Edit</button> -->
 
 
 
